--- a/views/livestreaming.ejs
+++ b/views/livestreaming.ejs
@@ -52,27 +52,10 @@
             </div>
         </div>
         <script type="text/javascript">
-            var canvas = document.getElementById("preview");
-            var context = canvas.getContext('2d');
-            canvas.width = 900;
-            canvas.height = 700;
 
-            context.width = canvas.width;
-            context.height = canvas.height;
-
-            var video = document.getElementById("video");
-            var socket = io('');
-
-            function viewVideo(){
-                context.drawImage(video, 0, 0, context.width, context.height);
-                socket.emit('stream',canvas.toDataURL('image/webp'));
-            }
-            $(function(){
-                setInterval(function(){
-                    viewVideo(video,context);
-                },0);
-            });
         </script>
         <% include layouts/foot %>
+        <script type="text/javascript" src="/javascripts/livestream-master.js"></script>
+        <script type="text/javascript" src="/javascripts/livestream.js"></script>
     </body>
 </html>
