--- a/views/register.ejs
+++ b/views/register.ejs
@@ -71,6 +71,7 @@
             </form>
         </div>
         <% include layouts/foot %>
+        <script type="text/javascript" src="/javascripts/register-script.js"></script>
         </script>
     </body>
 </html>
