fitur text chat done

--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -17,9 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
-                            <%= name %>
-                            </a>
+                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"><%= name %></a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/logout">Logout</a>
                         </li>
@@ -44,7 +42,7 @@
                     </div> -->
                 </div>
                 <div class="chat-form">
-                    <input type="text" placeholder="Say something nice" />
+                    <input type="text" id="chat-box" placeholder="Say something nice" />
                     <button id="button">Send</button>
                 </div>
             </div>
