--- a/views/livestreaming.ejs
+++ b/views/livestreaming.ejs
@@ -17,9 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
-                                <%= name %>
-                            </a>
+                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"><%= name %></a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/logout">Logout</a>
                         </li>
@@ -45,10 +43,10 @@
                     </div> -->
                 </div>
             </div>
-            <form class="chat-form">
-                <input type="text" placeholder="Say something nice" />
-                <button type="submit">Send</button>
-            </form>
+            <div class="chat-form">
+                <input type="text" id="chat-box" placeholder="Say something nice" />
+                <button id="button">Send</button>
+            </div>
             </div>
         </div>
         <script type="text/javascript">
