--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -13,7 +13,6 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
@@ -27,7 +26,6 @@
                 </div>
             </div>
         </nav>
-
         <!-- Jumbotron -->
         <div class="jumbotron4 jumbotron-fluid">
             <!-- Movie -->
@@ -35,12 +33,7 @@
             <div id="logger"></div>
             <!-- Chat -->
             <div class="chatbox-u">
-                <div class="chatlogs">
-                    <!-- <div class="chat">
-                        <div class="user-photo"><img src="img/default.png"></div>
-                        <p class="chat-message"><strong></strong> Iya, bener banget</p>
-                    </div> -->
-                </div>
+                <div class="chatlogs"></div>
                 <div class="chat-form">
                     <input type="text" id="chat-box" placeholder="Say something nice" />
                     <button id="button">Send</button>
