--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -10,5 +10,5 @@
 <!-- <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script> -->
     <!-- <script src="/socket.io/socket.io.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/css/style.css">
