--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,7 +49,7 @@
                 <div class="login">
                     <form action="/login" method="POST">
                         <b> <h1>Username</h1> </b>
-                        <p> <input type="text" title="username" name="username" /> </p>
+                        <p> <input type="text" title="username" name="username" autocomplete="off"/> </p>
                         <b> <h1>Password</h1> </b>
                         <p> <input type="Password" title="password" name="password" /> </p>
                         <p> <button type="submit" class="btn-login" name="login">Submit</button> </p>
