--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ body::after {
 /* Navbar */
 .navbar {
     position: relative;
-    z-index: 1;
+    z-index: 99999;
 }
 
 .navbar-brand {
@@ -267,38 +267,26 @@ body::after {
 }
 
 /* Movie */
-video {
+#video {
     position: relative;
-    z-index: 1;
-    /* width: 854px; */
-    /* height: 480px; */
-    margin-top: 100px;
+    z-index: 999;
+    max-width: 1024px; 
+    max-height: 512px;
+    margin-left: 20px;
 }
 
 /* Chatbox */
 .chatbox {
     position: relative;
-    width: 300px;
-    height: 500px;
+    max-width: 310px;
+    max-height: 576px;
     background:rgba(0,0,0,0.7);
     color: #F8F7F4;
     padding: 25px;
     box-shadow: 6px 6px 6px #000000;
     overflow: visible;
     margin-top: 10px;
-}
-
-.chatbox-u {
-    position: relative;
-    margin-top: 90px;
-    margin-left: 955px;
-    width: 280px;
-    min-width: 250px;
-    height: 500px;
-    background:rgba(0,0,0,0.7);
-    color: #F8F7F4;
-    padding: 25px;
-    box-shadow: 6px 6px 6px #000000;
+    z-index: 999;
 }
 
 .chatlogs{
@@ -325,31 +313,6 @@ video {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-.chat {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: flex-start;
-}
-
-.chat .user-photo {
-    width: 20px;
-    height: 20px;
-    /* background: #F8F7F4; */
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.chat .user-photo img {
-    width: 100%;
-}
-
-.chat .chat-message {
-    width: 85%;
-    padding: 0 15px;
-    margin: 0 0 10px 8px;
-    font-size: 10pt;
-}
-
 .chat-form {
     position: relative;
     z-index: 1;
@@ -367,11 +330,17 @@ video {
     font-size: 10pt;
     padding: 2px 10px;
     font-family: 'Roboto Mono', monospace;
+    margin-bottom: -40px;
 }
 
-.chat-video-wrapper {
-    margin-top: 100px;
+#chat-input{
+    color: white;
+    background:rgba(0,0,0,0);
+    border: none;
+    border-bottom: 1px solid white;
+    margin-bottom: -40px;
 }
+
 
 /* Phone Version */
 @media (max-width: 576px) {
