--- a/views/user-master.ejs
+++ b/views/user-master.ejs
@@ -21,10 +21,15 @@
             <div class="row">
                 <div class="col-12 col-md-8">
                         <h1 class="display-4">WELCOME ROOM MASTER</h1>
-                        <!-- <p> <a href="/livestreaming" class="btn-upload">Play Movie</a> </p> -->
-                        <button class="btn-upload"><a href="/livestreaming">Play Movie</a></button>
-                        <button class="btn-update"><a href="/logout">Logout</a></button>
-                        <!-- <p> <a href="/logout" class="btn-update">Logout</a> </p> -->
+                        <div class="dropdown show dropdown-film">
+                            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select A Film</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item" href="/livestreaming/joker">Joker</a>
+                                <a class="dropdown-item" href="/livestreaming/schematics">Schematics</a>
+                                <a class="dropdown-item" href="/livestreaming/avenger-endgame">Avenger Endgame</a>
+                            </div>
+                        </div>
+                        <a class="btn-secondary btn-update btn show" href="/logout" role="button">Logout</a>
                 </div>
                 <div class="col-12 col-md-3 thumbnail-name">
                     <img src="/images/profile/bear.jpg" alt="Gak bisa oy" class="img-thumbnail">
