--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,41 @@ body::after {
     line-height: 10px;
     font-weight: 500;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4);
-} 
+}
+
+/* User */
+.jumbotron2 {
+    background-image: url('/images/coba6.jpg');
+    background-size: cover;
+    height: 650px;
+    margin-top: -410px;
+    position: relative;
+    z-index: 2;
+}
+
+.jumbotron2 .container {
+    position: relative;
+    z-index: 1;
+}
+
+.jumbotron2::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 12%;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.2));
+    position: absolute;
+    top: 0;
+}
+
+.jumbotron2 .display-4 {
+    font-family: 'Viga', sans-serif;
+    text-align: right;
+    position: relative;
+    top: 160px;
+    right: 30px;
+    color: #F8F7F4;
+}
 }
 
 .display-4_login {
@@ -163,6 +197,7 @@ body::after {
     font-weight: 500;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4);
 }
+
 /* User */
 /* .jumbotron2 {
     background-image: url('/images/coba6.jpg');
@@ -193,10 +228,10 @@ body::after {
     top: 160px;
     right: 30px;
     color: #F8F7F4;
-} */
+}  */
 
 /* Room Master */
-/* .jumbotron3 {
+.jumbotron3 {
     background-image: url('/images/coba7.jpg');
     background-size: cover;
     height: 650px;
@@ -226,7 +261,7 @@ body::after {
     font-size: 45px;
     top: 160px;
     color: #F8F7F4;
-} */
+}
 
 .dropdown-menu {
     color: black;
@@ -468,7 +503,7 @@ video {
         font-family: 'Roboto Mono', monospace;
         line-height: 32px;
         padding: 50px 45px;
-        margin-left: -127px;
+        margin-left: -170px;
     }
     
     .login input{
@@ -519,7 +554,7 @@ video {
         text-align: right;
         margin-top: -15px;
         margin-bottom: -10px;
-        margin-right: 15px;
+        margin-right: 100px;
         font-size: 14px;
         line-height: 10px;
         font-weight: 500;
@@ -559,7 +594,7 @@ video {
         text-align: right;
         margin-top: -12px;
         margin-bottom: -10px;
-        margin-right: 20px;
+        margin-right: 110px;
         font-size: 14px;
         line-height: 10px;
         font-weight: 500;
