--- a/views/user-common.ejs
+++ b/views/user-common.ejs
@@ -5,7 +5,7 @@
         <title>Welcome</title>
     </head>
 
-    <body>
+    <body class="background">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
