--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,7 +126,7 @@ body::after {
     background-image: url('/images/coba6.jpg');
     background-size: cover;
     height: 650px;
-    margin-top: -410px;
+    margin-top: -435px;
     position: relative;
     z-index: 2;
 }
@@ -154,6 +154,99 @@ body::after {
     right: 30px;
     color: #F8F7F4;
 }
+
+.img-thumbnail {
+    /* top: 100%; */
+    top: 230px;
+    left: 505%;
+}
+
+.img-thumbnail3 {
+    top: 110px;
+    left: 7%;
+}
+
+.hi p {
+    z-index: 999 !important;
+    left: 505%;
+    top: 220px;
+}
+
+.hi2 p {
+    z-index: 999 !important;
+    top: 110px;
+}
+
+/* Room Master */
+.jumbotron3 {
+    background-image: url('/images/coba7.jpg');
+    background-size: cover;
+    height: 650px;
+    position: relative;
+    margin-top: -535px;
+    position: relative;
+    z-index: 2;
+}
+
+.jumbotron3 .container {
+    position: relative;
+    z-index: 1;
+}
+
+.jumbotron3::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 12%;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.2));
+    position: absolute;
+    top: 0;
+}
+
+.jumbotron3 .display-4 {
+    font-family: 'Viga', sans-serif;
+    text-align: right;
+    position: relative;
+    left: 30px;
+    font-size: 45px;
+    top: 160px;
+    color: #F8F7F4;
+}
+
+#dropdownMenuLink {
+    width: 20%;
+    top: 170px;
+    left: 105.5%;
+    border-radius: 40px;
+    border-color: white;
+}
+
+/* Halaman Livestreaming.ejs */
+
+#dropdownMenuLink {
+    
+}
+
+#dropdownMenuLink1 {
+    background-color: #000000;
+    position: relative;
+    width: 101.75%;
+    left: 19px;
+}
+
+}
+
+#dropdownMenuLink1 {
+    background-color: #000000;
+    position: relative;
+    /* width: 110%;
+    left: 20px; */
+}
+
+#dropdownMenuLink {
+    background-color: #000000;
+    position: relative;
+    z-index: 1000;
 }
 
 .display-4_login {
@@ -231,7 +324,7 @@ body::after {
 }  */
 
 /* Room Master */
-.jumbotron3 {
+/* .jumbotron3 {
     background-image: url('/images/coba7.jpg');
     background-size: cover;
     height: 650px;
@@ -261,7 +354,7 @@ body::after {
     font-size: 45px;
     top: 160px;
     color: #F8F7F4;
-}
+} */
 
 .dropdown-menu {
     color: black;
@@ -305,8 +398,8 @@ body::after {
 #video {
     position: relative;
     z-index: 999;
-    max-width: 1024px; 
-    max-height: 512px;
+    max-width: 854px; 
+    max-height: 480px;
     margin-left: 20px;
 }
 
@@ -322,6 +415,7 @@ body::after {
     overflow: visible;
     margin-top: 10px;
     z-index: 999;
+    right: 40px;
 }
 
 .chatlogs{
@@ -350,8 +444,8 @@ body::after {
 
 .chat-form {
     position: relative;
-    z-index: 1;
-    margin-top: 400px;
+    z-index: 999;
+    margin-top: 400px; 
     margin-bottom: 20px;
     display: flex;
     align-items: flex-end;    
@@ -591,6 +685,26 @@ body::after {
         z-index: 500;   
     }
 
+    /* User */
+    .img-thumbnail {
+        top: 100%;
+    }
+
+    .hi p{
+        top: 100%;
+    }
+
+    /* Room Master */
+    .hi2 p {
+        top: 100%;
+    }
+
+    /* Halaman Livestreaming.ejs */
+    #video {
+        left: -20px;
+        padding-right: -50px;
+        margin-right: -50px;
+    }
 }
     /* Navbar */
     .nav-link {
@@ -614,23 +728,6 @@ body::after {
         padding-bottom: 2px;
         margin-bottom: -4px;
     }
-
-    /* Jumbotron */
-    /* .jumbotron {
-        margin-top: -75px;
-    }
-
-    .jumbotron2 {
-        margin-top: -265px;
-    } */
-
-    /* .jumbotron3 {
-        margin-top: -265px;
-    }
-
-    .jumbotron4 {
-        margin-top: -85px;
-    } */
 
     /* Form Register */
     /* Form Register kalau ada upload photo */
@@ -830,6 +927,10 @@ body::after {
         font-family: 'Roboto Mono', monospace;
     }
 
+    .btn-join:visited {
+        color: white;
+    }
+
     .btn-logout{
         position: relative;
         top: 450px;
@@ -840,6 +941,10 @@ body::after {
         color: white;
         padding: 5px 35px 5px 35px;
         font-family: 'Roboto Mono', monospace;
+    }
+
+    .btn-logout:visited {
+        color: white;
     }
 
     .btn-upload,.btn-update{
@@ -859,7 +964,15 @@ body::after {
 
     .img-thumbnail {
         position: relative;
-        z-index: 1;
+        z-index: 999 !important;
+        border-radius: 100%;
+        width: 160px;
+        height: 160px;
+    }
+
+    .img-thumbnail3 {
+        position: relative;
+        z-index: 999 !important;
         border-radius: 100%;
         width: 160px;
         height: 160px;
@@ -867,6 +980,7 @@ body::after {
 
     .thumbnail-name{
         margin-top: 100px;
+        z-index: 4;
     }
 
     @media (max-width:992px){
@@ -893,6 +1007,16 @@ body::after {
         position: relative;
         text-align: center;
         z-index: 1;
+        right: 17%;
+        margin-top: 20px;
+        font-weight: 500;
+        color: white;
+        font-family: 'Noto Sans', sans-serif;
+    }
+
+    .hi2 p {
+        position: relative;
+        text-align: center;
         right: 17%;
         margin-top: 20px;
         font-weight: 500;
