--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -30,11 +30,14 @@
             <!-- Movie -->
             <img id="video" class="col-12 col-md-8">
             <!-- Chat -->
-            <div class="chatbox col-12 col-md-3">
-                <div class="chatlogs"></div>
-                <div class="chat-form">
-                    <input type="text" id="chat-input" placeholder="Say something nice" autocomplete="off"/>
-                    <button id="button">Send</button>
+            <!-- <div class="chatbox col-12 col-md-3"> -->
+            <div class="d-flex flex-row-reverse">
+                <div class="chatbox"> 
+                    <div class="chatlogs"></div>
+                    <div class="chat-form">
+                        <input type="text" id="chat-input" placeholder="Say something nice" autocomplete="off"/>
+                        <button id="button">Send</button>
+                    </div>
                 </div>
             </div>
 
