--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -20,8 +20,6 @@
                                 <a class="dropdown-item" href="/logout">Logout</a>
                             </div>
                         </li>
-                        <!-- Foto Profil -->
-                            <!-- <img src="img/5d7e27b07cf5d.png" alt="hi" class="img-thumbnail2"> -->
                     </ul>
                 </div>
             </div>
@@ -30,13 +28,13 @@
             <!-- Movie -->
             <img id="video" class="col-12 col-md-8">
             <!-- Chat -->
-            <!-- <div class="chatbox col-12 col-md-3"> -->
             <div class="d-flex flex-row-reverse">
                 <div class="chatbox"> 
                     <div class="chatlogs"></div>
                     <div class="chat-form">
                         <input type="text" id="chat-input" placeholder="Say something nice" autocomplete="off"/>
                         <button id="button">Send</button>
+                        <img id="voice-chat" class="rounded-circle" src="/images/voice.png"></img>
                     </div>
                 </div>
             </div>
