--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -28,7 +28,7 @@
         </nav>
 
             <!-- Movie -->
-            <img id="video" class="col-12 col-md-8">
+            <img id="video" controls="controls" class="col-12 col-md-8">
             <!-- Chat -->
             <!-- <div class="chatbox col-12 col-md-3"> -->
             <div class="d-flex flex-row-reverse">
