--- a/views/livestreaming.ejs
+++ b/views/livestreaming.ejs
@@ -15,6 +15,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
+                        <a class="nav-link" id="modalBtn" href="#" role="button" >USER</a>
+                            <div id="simpleModal" class="modal">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h2>Participant</h2>
+                                    <span class="closeBtn">&times;</span>
+                                    </div>
+                                    <p>Hello I am a Modal</p>
+                                </div>
+                            </div>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"><%= name %></a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -31,19 +41,19 @@
             <!-- Movie -->
             <video controls="controls" class="col-12 col-md-8" src="/movie/<%= film %>.mp4" id="video" autoplay="true"></video>
             <canvas id="preview" style="display: none;"></canvas>
+
             <!-- Chat -->
-            <!-- <div class="chatbox col-12 col-md-3"> -->
             <div class="d-flex flex-row-reverse">
-            <div class="chatbox">    
-                <div class="chatlogs"></div>
-                <div class="chat-form">
-                    <input type="text" id="chat-input" placeholder="Say something nice" autocomplete="off"/>
-                    <button id="button">Send</button>
+                <div class="chatbox">    
+                    <div class="chatlogs"></div>
+                    <div class="chat-form">
+                        <input type="text" id="chat-input" placeholder="Say something nice" autocomplete="off"/>
+                        <button id="button">Send</button>
+                    </div>
                 </div>
             </div>
-            </div>
-
-        <!-- <div class="row"> -->
+        
+            <!-- Change Movie -->
             <div class="dropdown show dropdown-film col-12 col-md-8">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Change Film</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -52,7 +62,17 @@
                     <a class="dropdown-item" href="/livestreaming/avenger-endgame">Avenger Endgame</a>
                 </div>
             </div>
-        <!-- </div> -->
+
+            <!-- Modal User -->
+            <!-- <button id="modalBtn" class="button">Click Here</button>
+
+            <div id="simpleModal" class="modal">
+                    <div class="modal-content">
+                        <span class="closeBtn">&times;</span>
+                        <p>Hello I am a Modal</p>
+                    </div>
+                </div> -->
+
         <script type="text/javascript">
 
         </script>
