chat udah bisa pake enter + autoscroll 90%

--- a/views/livestreaming.ejs
+++ b/views/livestreaming.ejs
@@ -14,7 +14,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
-                        <a class="nav-link" id="modalBtn" href="#" role="button" >USER</a>
+                        <a class="nav-link" id="modalBtn" href="#">user</a>
                             <div id="simpleModal" class="modal">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -41,7 +41,7 @@
             <!-- Chat -->
             <div class="d-flex flex-row-reverse">
                 <div class="chatbox">    
-                    <div class="chatlogs"></div>
+                    <div class="chatlogs" id="messages"></div>
                     <div class="chat-form">
                         <input type="text" id="chat-input" placeholder="Say something nice" autocomplete="off"/>
                         <button id="button">Send</button>
