--- a/public/css/style.css
+++ b/public/css/style.css
@@ -451,7 +451,7 @@ body::after {
     width: 100%;
     height: 360px;
     overflow-x: hidden; 
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .chatlogs::-webkit-scrollbar {
