--- a/views/user-common.ejs
+++ b/views/user-common.ejs
@@ -76,9 +76,9 @@
         <div class="dropdown show dropdown-film col-12 col-md-8" id="change-film-modal">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Change Film</a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#" id="joker">Joker</a>
-                <a class="dropdown-item" href="#" id="schematics">Schematics</a>
-                <a class="dropdown-item" href="#" id="avenger-endgame">Avenger Endgame</a>
+                <a class="dropdown-item" href="#" id="joker" value="joker">Joker</a>
+                <a class="dropdown-item" href="#" id="schematics" value="schematics">Schematics</a>
+                <a class="dropdown-item" href="#" id="avenger-endgame" value="avenger-endgame">Avenger Endgame</a>
             </div>
         </div>
 
