--- a/views/user-common.ejs
+++ b/views/user-common.ejs
@@ -18,7 +18,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"><%= name %></a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/logout">Logout</a>
+                                <a class="dropdown-item" href="/logout" id="logout">Logout</a>
                             </div>
                         </li>
                     </ul>
@@ -48,7 +48,6 @@
                     <p><input type="text" id="room-input" placeholder="Insert the room number" autocomplete="off" style="position:relative;margin-bottom:-150px;overflow: visible;z-index:999;"/></p>
                     <button class="btn-join join-room"> Join </button>
                     <span id='message'></span>
-                    <p> <a href="/logout" class="btn-logout">Logout</a> </p>
                 </div>
             </div>
         </div>
